--- a/Road to Recovery/pages/Test.html
+++ b/Road to Recovery/pages/Test.html
@@ -39,6 +39,7 @@
     <link href="../plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css" />
 
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
     <!-- Select2 css+js -->
@@ -117,7 +118,7 @@
             doc.innerHTML = counter;
             }
             function myfunction() {
-                    
+
                 if (counter == 1000) return;
                     //var RidePatNum = $("#ridePatNum").val();
                     var Pat = new Object();
@@ -167,7 +168,7 @@
                         }
                     });
                 }
-            
+
         });
     </script>
 
