--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -40,6 +40,7 @@
     <link href="../plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css" />
 
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
     <!-- Select2 css+js -->
@@ -56,12 +57,15 @@
             /* prevent horizontal scrollbar */
             overflow-x: hidden;
         }
+
         * html .ui-autocomplete {
             height: 100px;
         }
+
         input[type=text]:focus {
             background-color: #FFE684;
         }
+
         input[type=text], input[type=checkbox], input[type=date], #area, #type {
             border-color: #000
         }
