--- a/Road to Recovery/pages/login.html
+++ b/Road to Recovery/pages/login.html
@@ -15,6 +15,8 @@
     <link href="assets/css/pages.css" rel="stylesheet" type="text/css">
     <link href="assets/css/menu.css" rel="stylesheet" type="text/css">
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
+
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
     <style type="text/css">
         .wrapper-page {
@@ -22,13 +24,14 @@
             max-width: 450px;
         }
 
-        body,html {
+        body, html {
             overflow-y: hidden;
         }
-        #footer img{
-            margin:0px auto;
+
+        #footer img {
+            margin: 0px auto;
             height: 100%;
-            width:100%;
+            width: 100%;
         }
     </style>
 
@@ -127,7 +130,7 @@
 
     </div>
     <div class="text-center">
-        תאריך עדכון אחרון: 29/04/2019 12:30
+        תאריך עדכון אחרון: 16/05/2019 16:30
     </div>
         <div class="row" id="footer">
             <div class="col-sm-4">
