--- a/Road to Recovery/pages/passwordForm.html
+++ b/Road to Recovery/pages/passwordForm.html
@@ -48,6 +48,7 @@
     <link href="../plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css" />
 
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
     <!-- Select2 css+js -->
@@ -79,6 +80,7 @@
         * html .ui-autocomplete {
             height: 100px;
         }
+
         input[type=text]:focus {
             background-color: #FFE684;
         }
@@ -93,7 +95,7 @@
         $.jgrid.defaults.styleUI = 'Bootstrap';
 
         $(document).ready(function () {
-            
+
             includeHTML();
             if (window.location.hostname.toString() == 'localhost' || window.location.pathname.indexOf('test') != -1) {
                 $("#na").css("background-color", "#ffde89");
