--- a/Road to Recovery/pages/viewLocation - Old Datatable version.html
+++ b/Road to Recovery/pages/viewLocation - Old Datatable version.html
@@ -9,9 +9,11 @@
     <link rel="shortcut icon" href="assets/images/favicon_1.ico">
 
     <title>פרטי אזורים</title>
-    
+
     <style type="text/css">
-        .dt-body-left{text-align:left;}
+        .dt-body-left {
+            text-align: left;
+        }
     </style>
     <!-- DataTables -->
     <link href="../plugins/datatables/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
@@ -37,6 +39,7 @@
     <script src="assets/js/modernizr.min.js"></script>
 
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
     <script src="assets/js/jquery.min.js"></script>
