--- a/Road to Recovery/pages/viewPatient - Old Datatable version.html
+++ b/Road to Recovery/pages/viewPatient - Old Datatable version.html
@@ -26,6 +26,7 @@
     <script src="assets/js/CookiesFunctions.js"></script>
     <script src="assets/js/modernizr.min.js"></script>
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <!-- Select2 css+js -->
