--- a/Road to Recovery/pages/volunteerForm.html
+++ b/Road to Recovery/pages/volunteerForm.html
@@ -40,6 +40,7 @@
     <link href="../plugins/bootstrap-sweetalert/sweet-alert.css" rel="stylesheet" type="text/css" />
 
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
     <!-- Select2 css+js -->
@@ -62,10 +63,12 @@
         * html .ui-autocomplete {
             height: 100px;
         }
+
         input[type=text]:focus {
             background-color: #FFE684;
         }
-        input[type=text], input[type=checkbox], input[type=date], #typeVolunteer ,#gender{
+
+        input[type=text], input[type=checkbox], input[type=date], #typeVolunteer, #gender {
             border-color: #000
         }
     </style>
