--- a/Road to Recovery/pages/index.html
+++ b/Road to Recovery/pages/index.html
@@ -34,6 +34,7 @@
     <script src="assets/js/modernizr.min.js"></script>
 
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
     <script src="assets/js/jquery.min.js"></script>
