--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -26,6 +26,7 @@
     <script src="assets/js/CookiesFunctions.js"></script>
     <script src="assets/js/modernizr.min.js"></script>
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <!-- Select2 css+js -->
@@ -80,7 +81,7 @@
                     $('#wait').hide();
                     var arr_patients = JSON.parse(data.d);
                     //GENERAL.VOLUNTEERS.setvolunteersList(arr_volunteers);
-                
+
                     for (i in arr_patients) {
                         var equip = "";
                         for (j in arr_patients[i].Equipment) {
