--- a/Road to Recovery/pages/viewRidePatsOld.html
+++ b/Road to Recovery/pages/viewRidePatsOld.html
@@ -34,6 +34,7 @@
     <script src="assets/js/modernizr.min.js"></script>
 
     <!--GENERAL object and additional functions-->
+    <script src="lib/lz-string.js"></script>
     <script src="lib/master.js"></script>
 
     <script src="assets/js/jquery.min.js"></script>
@@ -147,12 +148,12 @@
 
 
                         //date2 = date.toLocaleString()//.substring(0, date.toLocaleString().length - 16);//-4
-                        
+
                         if (date.getDate() < 10) {
                             day = "0" + date.getDate();
                         } else day = date.getDate();
 
-                        
+
                         if (date.getMonth() + 1 < 10) {
                             month = "0" + (date.getMonth()+1);
                         } else month = date.getMonth()+1;
