another small a=update to '

--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -845,8 +845,8 @@
 
             try {
                 if (currentOrigin != '' && currentDestination != '') {
-                    $("#Origin option[value ='" + currentOrigin.replace("'", "\\'") + "']").prop('selected', true);
-                    $("#Destination option[value ='" + currentDestination.replace("'", "\\'") + "']").prop('selected', true);
+                    $("#Origin option[value ='" + currentOrigin + "']").prop('selected', true);
+                    $("#Destination option[value ='" + currentDestination + "']").prop('selected', true);
 
                 }
                 else {
