--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -67,6 +67,8 @@
             //$("#userStyle").mouseover(function () {
             //    $(this).css("background-color", "blue")
             //});
+            $('[data-toggle="tooltip"]').tooltip();   
+
             if(window.location.hostname.toString()=='localhost' || window.location.pathname.indexOf('test')!=-1){
                 $("#na").css("background-color", "#ffde89");
             }
@@ -207,8 +209,11 @@
                 dataType: "json",
                 url: "WebService.asmx/GetRidePatView",
                 contentType: "application/json; charset=utf-8",
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("Content-Encoding", "gzip");
+                },
                 type: "POST",
-                data: JSON.stringify({ volunteerId: volunteerId }),
+                data: JSON.stringify({ volunteerId: volunteerId,maxDays:-1 }),
                 success: function (data) {
                     arr_rides = JSON.parse(data.d);
                     GENERAL.RIDEPAT.setRidePatList(JSON.stringify(arr_rides));
@@ -282,7 +287,7 @@
                     tFuture.columns([0]).order('asc').draw();
 
                     $('#datatable-morning tbody').on('draw', manipulateTables());
-                    $(".dataTables_empty").html("אין הסעות");
+                    $(".dataTables_empty").html("אין הסעות لا توجد سفريات No drives");
 
 
                     //manage button clicks on tables
@@ -718,10 +723,13 @@
                             <div class="page-title-box">
                                 <ol class="breadcrumb pull-right">
 
-                                    <li class="active">ניהול ההסעות שלי</li>
+                                    <li class="active">
+                                        ניהול ההסעות שלי
+                                        
+                                    </li>
                                 </ol>
-                                <h4 class="page-title">
-                                    ניהול ההסעות שלי&nbsp&nbsp<i>
+                                <h4  class="page-title">
+                                    ניהול ההסעות שלי&nbsp&nbsp&nbsp<i data-toggle="tooltip" title="My Rides تنسيق السفريات الخاصة بي">
                                         <img src="../../Media/הסעות להיום.png" height="25" width="25" />
                                     </i>
                                 </h4>
@@ -752,27 +760,27 @@
                                     </div>-->
 
                                     <div class="col-sm-12 text-right ">
-                                        <button type="button" id="createCustomer" onclick="newRidePatForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
+                                        <button data-placement="right" data-toggle="tooltip" title="New Ride جديد " type="button" id="createCustomer" onclick="newRidePatForm()" class="btn btn-success waves-effect w-md waves-light m-b-5"><span class="glyphicon glyphicon-plus-sign m-r-5"></span>חדש</button>
                                     </div>
                                 </div>
 
                                 <div id="accordion" class="panel-group">
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col1">
-                                            <h4 class="panel-title"> <a href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">נסיעות לבוקר</a></h4>
+                                            <h4 data-toggle="tooltip" data-placement="top" title="Morning Rides  سفريات الصباح" class="panel-title"> <a href="#collapse1" data-parent="#accordion" data-toggle="collapse" class="dropdown active open">נסיעות לבוקר</a></h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse1">
                                             <div class="panel-body">
                                                 <table id="datatable-morning" class="table table-striped table-bordered">
                                                     <thead>
                                                         <tr>
-                                                            <th>שעה</th>
-                                                            <th>מוצא</th>
-                                                            <th>יעד</th>
-                                                            <th>החולה</th>
-                                                            <th>המסיע</th>
-                                                            <th>סטטוס ההסעה</th>
-                                                            <th>פעולות</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Time  الساعة">שעה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Origin  نقطة الانطلاق">מוצא</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Destination  نقطة الوصول">יעד</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Patient  المريض">החולה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Driver  السائق">המסיע</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Status  حالة السفرية">סטטוס ההסעה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody></tbody>
@@ -782,20 +790,20 @@
                                     </div>
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col2">
-                                            <h4 class="panel-title"> <a href="#collapse2" data-parent="#accordion" data-toggle="collapse">נסיעות לאחה"צ</a></h4>
+                                            <h4 data-toggle="tooltip" data-placement="top" title="Afternoon Rides  سفريات المساء" class="panel-title"> <a href="#collapse2" data-parent="#accordion" data-toggle="collapse">נסיעות לאחה"צ</a></h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse2">
                                             <div class="panel-body">
                                                 <table id="datatable-afternoon" class="table table-striped table-bordered">
                                                     <thead>
                                                         <tr>
-                                                            <th>שעה</th>
-                                                            <th>מוצא</th>
-                                                            <th>יעד</th>
-                                                            <th>החולה</th>
-                                                            <th>המסיע</th>
-                                                            <th>סטטוס ההסעה</th>
-                                                            <th>פעולות</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Time  الساعة">שעה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Origin  نقطة الانطلاق">מוצא</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Destination  نقطة الوصول">יעד</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Patient  المريض">החולה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Driver  السائق">המסיע</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Status  حالة السفرية">סטטוס ההסעה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody></tbody>
@@ -805,21 +813,21 @@
                                     </div>
                                     <div class="panel panel-primary">
                                         <div class="panel-heading" id="col3">
-                                            <h4 class="panel-title"> <a href="#collapse3" data-parent="#accordion" data-toggle="collapse">נסיעות עתידיות</a></h4>
+                                            <h4 data-toggle="tooltip" data-placement="bottom" title="Future Rides  سفريات مستقبلية" class="panel-title"> <a  href="#collapse3" data-parent="#accordion" data-toggle="collapse">נסיעות עתידיות</a></h4>
                                         </div>
                                         <div class="panel-collapse collapse" id="collapse3">
                                             <div class="panel-body">
                                                 <table id="datatable-future" class="table table-striped table-bordered">
                                                     <thead>
                                                         <tr>
-                                                            <th>תאריך</th>
-                                                            <th>שעה</th>
-                                                            <th>מוצא</th>
-                                                            <th>יעד</th>
-                                                            <th>החולה</th>
-                                                            <th>המסיע</th>
-                                                            <th>סטטוס ההסעה</th>
-                                                            <th>פעולות</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Fate  الساعة">תאריך</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Time  الساعة">שעה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Origin  نقطة الانطلاق">מוצא</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Destination  نقطة الوصول">יעד</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Patient  المريض">החולה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Driver  السائق">המסיע</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Status  حالة السفرية">סטטוס ההסעה</th>
+                                                            <th data-toggle="tooltip" data-placement="top" title="Actions  اعمال">פעולות</th>
                                                         </tr>
                                                     </thead>
                                                     <tbody></tbody>
@@ -837,7 +845,7 @@
             </div>
             <!-- end content -->
             <!-- FOOTER -->
-            <footer class="footer text-right">
+            <footer data-toggle="tooltip" data-placement="top" title="© 2018 - 2019. All rights reserved The Road to Recovery.  جميع الحقوق محفوظة لجمعية الطريق الى الشفاء"  class="footer text-right">
                 2018 © כל הזכויות שמורות לעמותת בדרך להחלמה
             </footer>
             <!-- End FOOTER -->
