--- a/Road to Recovery/pages/escortedForm.html
+++ b/Road to Recovery/pages/escortedForm.html
@@ -269,6 +269,7 @@
                         $("#HomePhone").attr('disabled', 'disabled');
                         $("#firstA").attr('disabled', 'disabled');
                         $("#lastA").attr('disabled', 'disabled');
+                        $("#patientEnglishName").attr('disabled', 'disabled');
                         // initializeSelect2();
                     }
                 }
@@ -313,6 +314,7 @@
                     $("#phone2").val(escorted.CellPhone2);
                     $("#HomePhone").val(escorted.HomePhone);
                     $("#city").val(escorted.City);
+                    $("#patientEnglishName").val(escorted.EnglishName);
                     if (escorted.IsActive)
                         $("#activeescorted").prop('checked', true);
                     else
@@ -481,6 +483,16 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
+                                                    <label class="col-sm-3 control-label">שם באנגלית&nbsp;<span class="required">*</span></label>
+                                                    <div class="col-sm-6">
+                                                        <input id="patientEnglishName" name="patientEnglishName" type="text" class="form-control">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row m-l-10 m-r-10">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
                                                     <label class="col-sm-3 control-label">اسم شخصي&nbsp;</label>
                                                     <div class="col-sm-6">
                                                         <input id="firstA" name="firstA" type="text" class="form-control">
@@ -562,7 +574,7 @@
                                         <div id="addressesForm">
                                             <hr />
                                             <!--<table id="jqGrid" class="table table-striped table-bordered text-right"></table>
-                                            <div id="jqGridPager"></div>-->
+        <div id="jqGridPager"></div>-->
                                             <div class="text-right m-t-30 row">
                                                 <button type="submit" id="saveCustomer" class="btn btn-success waves-effect w-md waves-light m-b-5  m-r-15"><i class="ti-save m-r-5"></i>שמירה</button>
                                             </div>
@@ -648,6 +660,7 @@
                         IsActive = true;
                     }
                     var displayNamePat = $("#patientDisplayName").val();
+                    var englishName = $("#patientEnglishName").val();
                     // var displayName = $("#escortedName").val();
                     var firstNameH = $("#escortedFirstName").val();
                     var lastNameH = $("#escortedLastName").val();
@@ -684,7 +697,7 @@
                     patient = { displayName: displayNamePat, id: Pid }
                     escorted = {
                         pat: patient, id: Eid, firstNameH: firstNameH, firstNameA: nameA, lastNameH: lastNameH, lastNameA: lastNameA, city: city, cellPhone: cellPhone, cellphone2: cellphone2, homePhone: homePhone,
-                        contactType: contactType, gender: gender, IsActive: IsActive
+                        contactType: contactType, gender: gender, IsActive: IsActive, EnglishName: englishName
                     }
                     $.ajax({
                         dataType: "json",
@@ -742,7 +755,12 @@
             var hospital = true;
             var gender = true;
             var relationship = true;
+            var isEnglishName = true;
 
+            var englishName = $("#patientEnglishName").val();
+            if (englishName=="") {
+                isEnglishName = false;
+            }
             var city = $("#city").val();
             for (i in cities) {
                 if (city == cities[i]) {
@@ -824,7 +842,7 @@
             }
 
 
-            if (!CityExists || !phoneMatch || !phoneMatch2 || !phoneMatch3 || !gender || !relationship) {
+            if (!isEnglishName || !CityExists || !phoneMatch || !phoneMatch2 || !phoneMatch3 || !gender || !relationship) {
                 return false;
             } else return true;
         }
