--- a/Road to Recovery/pages/viewPatient.html
+++ b/Road to Recovery/pages/viewPatient.html
@@ -39,6 +39,8 @@
         $(document).ready(function () {
 
             includeHTML();
+            $('[data-toggle="tooltip"]').tooltip();
+
             if(window.location.hostname.toString()=='localhost' || window.location.pathname.indexOf('test')!=-1){
                 $("#na").css("background-color", "#ffde89");
             }
@@ -121,7 +123,8 @@
                             if (newDate != 0) {
                                 //t.row.add([arr_patients[i].DisplayName, cellPhoneCheck, newDate, arr_patients[i].Barrier.Name, arr_patients[i].Hospital.Name, equip, arr_patients[i].Remarks, btnStr]).draw(false); // arr_patients[i].BirthDate.substring(0,10),
                                 Patient = {
-                                    DisplayName:arr_patients[i].DisplayName,
+                                    DisplayName: arr_patients[i].DisplayName,
+                                    EnglishName: arr_patients[i].EnglishName,
                                     CellPhone:cellPhoneCheck,
                                     Date:newDate,
                                     Barrier:arr_patients[i].Barrier.Name,
@@ -133,7 +136,8 @@
                             }
                             else {
                                 Patient = {
-                                    DisplayName:arr_patients[i].DisplayName,
+                                    DisplayName: arr_patients[i].DisplayName,
+                                    EnglishName: arr_patients[i].EnglishName,
                                     CellPhone:cellPhoneCheck,
                                     Date:"",
                                     Barrier:arr_patients[i].Barrier.Name,
@@ -148,7 +152,8 @@
                         }
                         else {
                                 Patient = {
-                                    DisplayName:arr_patients[i].DisplayName,
+                                    DisplayName: arr_patients[i].DisplayName,
+                                    EnglishName: arr_patients[i].EnglishName,
                                     CellPhone:cellPhoneCheck,
                                     Date:"",
                                     Barrier:arr_patients[i].Barrier.Name,
@@ -174,6 +179,7 @@
                         ],
                         columns: [
                             { data: "DisplayName" },
+                            { data: "EnglishName" },
                             { data: "CellPhone" },
                             { data: "Date" },
                             { data: "Barrier" },
@@ -344,7 +350,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="page-title-box">
-                                <ol class="breadcrumb pull-right">
+                                <ol data-toggle="tooltip" title="إدارة المرضى   Patients List" class="breadcrumb pull-right">
                                     <li class="active">ניהול חולים</li>
                                 </ol>
                                 <h4 class="page-title">
@@ -377,7 +383,7 @@
                                 <div class="row">
                                     <div class="col-sm-3 checkbox checkbox-primary text-left">
                                         <input id="activePatient" type="checkbox" onchange="refreshTable()" checked>
-                                        <label for="activePatient">
+                                        <label data-placement="bottom" data-toggle="tooltip" title="مرضى فعالون فقط   Active Patients only" for="activePatient">
                                             חולים פעילים בלבד
                                         </label>
                                     </div>
@@ -389,13 +395,14 @@
                                     <thead>
                                         <tr>
                                             <th>החולה</th>
-                                            <th>טלפון</th>
-                                            <th>גיל</th>
-                                            <th>מחסום</th>
-                                            <th>בית חולים</th>
-                                            <th>ציוד נלווה</th>
-                                            <th>הערות</th>
-                                            <th>פעולות</th>
+                                            <th>שם באנגלית</th>
+                                            <th data-toggle="tooltip" title="هاتف   Phone">טלפון</th>
+                                            <th data-toggle="tooltip" title="جيل   Age">גיל</th>
+                                            <th data-toggle="tooltip" title="معبر   Border Crossing">מחסום</th>
+                                            <th data-toggle="tooltip" title="مستشفى   Hospital">בית חולים</th>
+                                            <th data-toggle="tooltip" title="معدات مرافقة   Equipment">ציוד נלווה</th>
+                                            <th data-toggle="tooltip" title="ملاحظات   Notes">הערות</th>
+                                            <th data-toggle="tooltip" title="اعمال   Actions">פעולות</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
