updates on assistant

--- a/Road to Recovery/pages/HelperMenu.html
+++ b/Road to Recovery/pages/HelperMenu.html
@@ -10,7 +10,7 @@
                         <i>
                             <img src="../../Media/הסעות להיום.png" height="25" width="25" />
                         </i>
-                        <span>ניהול ההסעות שלי</span>
+                        <span data-toggle="tooltip" data-placement="left" title="My Rides تنسيق السفريات الخاصة بي">ניהול ההסעות שלי</span>
                     </a>
                 </li>
 
@@ -19,7 +19,7 @@
                         <i>
                             <img src="../../Media/רשימת חולים.png" height="25" width="25" />
                         </i>
-                        <span id="patient">חולים</span>
+                        <span data-toggle="tooltip" title="إدارة المرضى   Patients List" data-placement="left" id="patient">חולים</span>
                     </a>
                 </li>
 
@@ -28,7 +28,7 @@
                         <i>
                             <img src="../../Media/התנתקות מהמערכת.png" height="25" width="25" />
                         </i>
-                        <span>התנתקות מהמערכת</span>
+                        <span data-toggle="tooltip" title="تسجيل خروج   Exit" data-placement="left">התנתקות מהמערכת</span>
                     </a>
                 </li>
             </ul>
