--- a/Road to Recovery/pages/passwordForm.html
+++ b/Road to Recovery/pages/passwordForm.html
@@ -93,9 +93,11 @@
         arr_addressRows = [];
         $.jgrid.defaults.responsive = true;
         $.jgrid.defaults.styleUI = 'Bootstrap';
-
+        var isAssistant = JSON.parse(GENERAL.USER.getIsAssistant());
         $(document).ready(function () {
-
+            if(isAssistant){
+                location.href = "manageRidePats.html";
+            }
             includeHTML();
             if (window.location.hostname.toString() == 'localhost' || window.location.pathname.indexOf('test') != -1) {
                 $("#na").css("background-color", "#ffde89");
