--- a/Road to Recovery/pages/locationForm.html
+++ b/Road to Recovery/pages/locationForm.html
@@ -108,6 +108,7 @@
                         $("#ManagerLastName").attr('disabled', 'disabled');
                         $("#ManagerName").attr('disabled', 'disabled');
                         $("#saveLocation").attr('disabled', 'disabled');
+                        $("#locationEnglishName").attr('disabled', 'disabled');
 
                     }
                     else{
@@ -134,6 +135,7 @@
                     GENERAL.LOCATIONS.setLocationsList(location);
 
                     $("#type").val(location.Type);
+                    $("#locationEnglishName").val(location.EnglishName);
                     $("#locationName").val(location.Name);
                     $("#locationName").attr('disabled', 'disabled');
                     $("#area").val(location.Area);
@@ -236,7 +238,7 @@
                                     <div class="row">
                                         <h4 class="m-t-0 header-title"><b>פרטי אזור</b></h4>
                                         <!--<p class="text-muted font-13 m-b-30">
-                                        יצירה, צפייה ועריכת אזור. לחץ על כפתור חזור בכדי לצפות בכל האזורים.-->
+    יצירה, צפייה ועריכת אזור. לחץ על כפתור חזור בכדי לצפות בכל האזורים.-->
                                         <br />
 
                                         <div class="col-md-6 checkbox checkbox-primary text-left">
@@ -262,6 +264,16 @@
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
                                                 <div class="form-group">
+                                                    <label class="col-sm-2 control-label">שם באנגלית&nbsp;<span class="required">*</span></label>
+                                                    <div class="col-sm-6">
+                                                        <input id="locationEnglishName" name="locationEnglishName" type="text" class="form-control">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="row m-l-10 m-r-10">
+                                            <div class="col-sm-6">
+                                                <div class="form-group">
                                                     <label class="col-sm-2 control-label">אזור&nbsp;<span class="required">*</span></label>
                                                     <div class="col-sm-6" id="selectgender">
                                                         <select id="area" name="area" class="form-control">
@@ -277,13 +289,13 @@
                                             </div>
 
                                             <!--<div class="col-sm-6">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label">اسم عائلة&nbsp;</label>
-                                                    <div class="col-sm-6">
-                                                        <input id="lastA" name="lastA" type="text" class="form-control">
-                                                    </div>
-                                                </div>
-                                            </div>-->
+            <div class="form-group">
+                <label class="col-sm-2 control-label">اسم عائلة&nbsp;</label>
+                <div class="col-sm-6">
+                    <input id="lastA" name="lastA" type="text" class="form-control">
+                </div>
+            </div>
+        </div>-->
                                         </div>
 
                                         <div class="row m-l-10 m-r-10">
@@ -335,52 +347,52 @@
                                                 </div>
                                             </div>
                                             <!--<div class="col-sm-6">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label">Email</label>
-                                                    <div class="col-sm-6">
-                                                        <input id="email" name="email" type="text" class="form-control" style="text-align:left;">
-                                                    </div>
-                                                </div>
-                                            </div>-->
+            <div class="form-group">
+                <label class="col-sm-2 control-label">Email</label>
+                <div class="col-sm-6">
+                    <input id="email" name="email" type="text" class="form-control" style="text-align:left;">
+                </div>
+            </div>
+        </div>-->
                                         </div>
                                         <div class="row m-l-10 m-r-10">
                                             <!--<div class="col-sm-6">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label">משמרות מועדפות</label>
-                                                    <div class="col-sm-6">
-                                                        <label id="PrefShift" name="PrefShift"></label>
-                                                    </div>
-                                                </div>
-                                            </div>-->
+            <div class="form-group">
+                <label class="col-sm-2 control-label">משמרות מועדפות</label>
+                <div class="col-sm-6">
+                    <label id="PrefShift" name="PrefShift"></label>
+                </div>
+            </div>
+        </div>-->
                                             <!--<div class="col-sm-6">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label">מקומות מועדפים</label>
-                                                    <div class="col-sm-6" id="selectPreferRoute1">
-                                                        <label id="PrefLocation" name="PrefLocation"></label>
-                                                    </div>
-                                                </div>
-                                            </div>-->
+            <div class="form-group">
+                <label class="col-sm-2 control-label">מקומות מועדפים</label>
+                <div class="col-sm-6" id="selectPreferRoute1">
+                    <label id="PrefLocation" name="PrefLocation"></label>
+                </div>
+            </div>
+        </div>-->
                                         </div>
                                         <div class="row m-l-10 m-r-10">
                                             <!--<div class="col-sm-6">
-                                            <div class="form-group">
-                                                <label class="col-sm-2 control-label">תאריך הצטרפות </label>-->
+        <div class="form-group">
+            <label class="col-sm-2 control-label">תאריך הצטרפות </label>-->
                                             <!--<div class="col-sm-6">
-                                                <input id="joinDate" name="joinDate" type="text" placeholder="dd/mm/yyyy" class="form-control">
-                                            </div>-->
+            <input id="joinDate" name="joinDate" type="text" placeholder="dd/mm/yyyy" class="form-control">
+        </div>-->
                                             <!--<div class="col-sm-6">
-                                                        <input type="date" id="joinDate" placeholder="dd/mm/yyyy" class="form-control">
-                                                    </div>
-                                                </div>
-                                            </div>-->
+                    <input type="date" id="joinDate" placeholder="dd/mm/yyyy" class="form-control">
+                </div>
+            </div>
+        </div>-->
                                             <!--div class="col-sm-6">
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label">הוראות הגעה</label>
-                                                    <div class="col-sm-6">
-                                                        <input id="direction" name="address" type="text" class="form-control">
-                                                    </div>
-                                                </div>
-                                            </div>-->
+            <div class="form-group">
+                <label class="col-sm-2 control-label">הוראות הגעה</label>
+                <div class="col-sm-6">
+                    <input id="direction" name="address" type="text" class="form-control">
+                </div>
+            </div>
+        </div>-->
                                         </div>
                                         <div class="row m-l-10 m-r-10">
                                             <div class="col-sm-6">
@@ -484,6 +496,7 @@
                     if (!valid) return false;
 
                     var locationName = $("#locationName").val();
+                    var engishName = $("#locationEnglishName").val();
                     var area = $("#area").val();
                     var type = $("#type").val();
                     var direction = $("#direction").val();
@@ -511,7 +524,7 @@
                     newLocation = {
                         Type: type, Name: locationName, Area: area, Direction: "", Responsible: null,
                         Status: active, Remarks: remark, ManagerName: managerFirstName,
-                        ManagerLastName: managerLastName, ManagerPhones: cellPhone
+                        ManagerLastName: managerLastName, ManagerPhones: cellPhone,EnglishName:engishName
                     };
                     $.ajax({
                         dataType: "json",
