--- a/Road to Recovery/pages/viewLocation.html
+++ b/Road to Recovery/pages/viewLocation.html
@@ -188,18 +188,18 @@
             $('#datatable-buttons tbody').on('click', '#remove', function () {
                 var data = tbl.row($(this).parents('tr')).data();
                 swal({
-                    title: "האם אתם בטוחים?",
+                    title: "هل انت متأكد?\nהאם אתם בטוחים?",
                     type: "warning",
-                    text: "הפיכת האזור " + data.Name + " ללא פעיל",
+                    text: "הפיכת האזור " + data.Name + " ללא פעיל\nتم تحويل المنطقة لغير فعالة",
                     showCancelButton: true,
-                    cancelButtonText: "בטל",
+                    cancelButtonText: "الغاء\nבטל",
                     confirmButtonClass: 'btn-warning',
-                    confirmButtonText: "מחיקה",
+                    confirmButtonText: "حذف\nמחיקה",
                     closeOnConfirm: false
                 }, function () {
                     deactivateLocation(data.Name, 'false');
                     swal({
-                        title: "האזור הפך ללא פעיל",
+                        title: "تم تحويل المنطقة لغير فعالة\nהאזור הפך ללא פעיל",
                         timer: 1000,
                         type: "success",
                         showConfirmButton: false
@@ -211,18 +211,18 @@
             $('#datatable-buttons tbody').on('click', '#reactive', function () {
                 var data = tbl.row($(this).parents('tr')).data();
                 swal({
-                    title: "האם אתם בטוחים?",
+                    title: "هل انت متأكد?\nהאם אתם בטוחים?",
                     type: "warning",
-                    text: "שחזור האזור " + data.Name,
+                    text: "שחזור האזור " + data.Name +"\nاسترجاع المنطقة",
                     showCancelButton: true,
-                    cancelButtonText: "בטל",
+                    cancelButtonText: "בטל\nالغاء",
                     confirmButtonClass: 'btn-warning',
-                    confirmButtonText: "שחזר",
+                    confirmButtonText: "שחזר\nاسترجاع",
                     closeOnConfirm: false
                 }, function () {
                     deactivateLocation(data.Name, 'true');
                     swal({
-                        title: "האזור הפך לפעיל",
+                        title: "האזור הפך לפעיל\nتم تحويل المنطقة لغير فعالة",
                         timer: 1000,
                         type: "success",
                         showConfirmButton: false
